--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "use-context-hook": "^2.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
